# interview

./: README.md
point_8/: CMakeLists.txt  README.md  package.xml
point_8/src/: trace3dPoint.cpp
points_from_1_to_7/: CMakeLists.txt  package.xml
points_from_1_to_7/config/rviz/: configuration.rviz
points_from_1_to_7/launch/: frames.launch.py
points_from_1_to_7/src/: drawer.cpp  im_pub.cpp  publish_frames.cpp  transform.cpp
